--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
                         </a>
                       </div>
                       <div class="topNews__media">
-                        <div class="topNews__subheading">オプロメディア</div>
+                        <div class="topNews__subheading">Medical Information Services</div>
                         <div class="topNews__mediaList">
                           <a
                             href="#"
@@ -910,7 +910,7 @@
                             target="_blank"
                           >
                             <span class="topNews__mediaName"
-                              >Medical Information Services</span
+                              ></span
                             >
                           Safely manage and leverage vast medical data for improving the healthcare quality
                             <span>
@@ -963,6 +963,70 @@
                             </span>
                           </a>
                         </div>
+                      </div>
+                       <div class="topNews__event">
+                        <div class="topNews__subheading">
+                          Advanced Medical AI Solutions 
+                        </div>
+                        <a
+                          href="https://event.opro.net/"
+                          class="topNews__eventLink"
+                          target="_blank"
+                        >
+                          Providing innovative AI solutions that leverage the latest technology to the medical segment.
+                          <span>
+                            <svg
+                              xmlns="http://www.w3.org/2000/svg"
+                              width="34"
+                              height="37"
+                              viewBox="0 0 34 37"
+                              fill="none"
+                            >
+                              <circle
+                                cx="17"
+                                cy="18"
+                                r="16.5"
+                                stroke="#B8CADE"
+                              />
+                              <path
+                                d="M15 13.5L20 18.5L15 23.5"
+                                stroke="#13132D"
+                              />
+                            </svg>
+                          </span>
+                        </a>
+                      </div>
+                       <div class="topNews__event">
+                        <div class="topNews__subheading">
+                          Advanced Medical AI Solutions 
+                        </div>
+                        <a
+                          href="https://event.opro.net/"
+                          class="topNews__eventLink"
+                          target="_blank"
+                        >
+                          Providing innovative AI solutions that leverage the latest technology to the medical segment.
+                          <span>
+                            <svg
+                              xmlns="http://www.w3.org/2000/svg"
+                              width="34"
+                              height="37"
+                              viewBox="0 0 34 37"
+                              fill="none"
+                            >
+                              <circle
+                                cx="17"
+                                cy="18"
+                                r="16.5"
+                                stroke="#B8CADE"
+                              />
+                              <path
+                                d="M15 13.5L20 18.5L15 23.5"
+                                stroke="#13132D"
+                              />
+                            </svg>
+                          </span>
+                        </a>
                       </div>
                     </div>
                   </div>
