--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
                         </a>
                       </div>
                       <div class="topNews__event">
-                        <div class="topNews__subheading">
+                        <div class="topNews__subheading f-20">
                           AI-Powered Medical Diagnostic Support System
                         </div>
                         <a
