--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                       </div>
                       <div class="topNews__event">
                         <div class="topNews__subheading f-20">
-                          AI-Powered Medical Diagnostic Support System
+                          <span>AI-Powered Medical Diagnostic Support System</span>
                         </div>
                         <a
                           href="https://event.opro.net/"
