--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@
               <section class="l-topRecruit l-topSection">
                 <div class="topRecruit">
                   <div class="topRecruit__overview">
-                    <div class="topRecruit__number">04</div>
+                    <div class="topRecruit__number">05</div>
                     <div class="topRecruit__tag">
                       <span class="topRecruit__tagIcon"
                         ><img
@@ -1052,21 +1052,20 @@
                       <span class="topRecruit__tagInner">採用情報</span>
                     </div>
                     <h2 class="topRecruit__heading js-topHeading">
-                      <span class="js-topHeadingInner">世界を、</span
-                      ><span class="js-topHeadingInner">ビジネス</span
-                      ><span class="js-topHeadingInner">を</span><br /><span
+                      <span class="js-topHeadingInner">AI-Assisted</span
+                      ><span class="js-topHeadingInner">Medical Diagnosis</span
+                      ><span class="js-topHeadingInner"></span><br /><span
                         class="js-topHeadingInner"
-                        >もっと</span
-                      ><span class="js-topHeadingInner">SIMPLE</span
-                      ><span class="js-topHeadingInner">に</span>
+                        ></span
+                      >
                     </h2>
                     <div class="topRecruit__buttonarea">
                       <a
-                        href="https://recruit.opro.net/"
+                        href="#"
                         class="top__button"
                         target="_blank"
                       >
-                        採用情報を見る
+                        MORE DETAIL
                         <span>
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -1086,11 +1085,11 @@
                     </div>
                   </div>
                   <div class="topRecruit__inner">
-                    「make IT simple」というミッションのもと、<br
+                    Improving the Healthcare Quality<br
                       class="onlyPc"
-                    />お客様の企業活動におけるDXを促進することで、<br
+                    />Reducing the Burden on Healthcare Professionals<br
                       class="onlyPc"
-                    />生産性の向上とともに、成功に導くためのSaaSを展開しています。<br />あなたの力を最大限発揮できる環境で、<br
+                    />Addressing Disparities in Healthcare Access<br />あなたの力を最大限発揮できる環境で、<br
                       class="onlyPc"
                     />部門の垣根を超えたチームと共に挑戦してみませんか。
                   </div>
