--- a/index.html
+++ b/index.html
@@ -1087,11 +1087,9 @@
                   <div class="topRecruit__inner">
                     Improving the Healthcare Quality<br
                       class="onlyPc"
-                    />Reducing the Burden on Healthcare Professionals<br
+                    /><span>Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span>Reducing the Burden on Healthcare Professionals<br
                       class="onlyPc"
-                    />Addressing Disparities in Healthcare Access<br />あなたの力を最大限発揮できる環境で、<br
-                      class="onlyPc"
-                    />部門の垣根を超えたチームと共に挑戦してみませんか。
+                    />Addressing Disparities in Healthcare Access<br />
                   </div>
                 </div>
               </section>
