--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
                   <div class="topRecruit__inner">
                     Improving the Healthcare Quality<br
                       class="onlyPc"
-                    /><span>Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span>Reducing the Burden on Healthcare Professionals<br
+                    /><span class="f-12 pl-20">Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span>Reducing the Burden on Healthcare Professionals<br
                       class="onlyPc"
                     />Addressing Disparities in Healthcare Access<br />
                   </div>
