--- a/index.html
+++ b/index.html
@@ -1087,9 +1087,9 @@
                   <div class="topRecruit__inner">
                     Improving the Healthcare Quality<br
                       class="onlyPc"
-                    /><span class="f-12 pl-20">Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span>Reducing the Burden on Healthcare Professionals<br
+                    /><span class="f-12 ml-20">Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span>Reducing the Burden on Healthcare Professionals<span class="f-12 ml-20">By assisting with image interpretation and diagnosis, AI can help healthcare providers deliver higher-quality care to more patients<br></span><br
                       class="onlyPc"
-                    />Addressing Disparities in Healthcare Access<br />
+                    />Addressing Disparities in Healthcare Access<span class="f-12 ml-20">Reducing regional disparities and improving the equity and accessibility of healthcare<br></span><br />
                   </div>
                 </div>
               </section>
