--- a/index.html
+++ b/index.html
@@ -1092,9 +1092,7 @@
                       class="onlyPc"
                     />
                     <span class="f-12 ml-20">By assisting with image interpretation and diagnosis, AI can help healthcare providers deliver higher-quality care to more patients<br></span>
-                    <br
-                      class="onlyPc"
-                    />Addressing Disparities in Healthcare Access
+                   Addressing Disparities in Healthcare Access
                     <br
                       class="onlyPc"
                     />  
