--- a/index.html
+++ b/index.html
@@ -1085,14 +1085,14 @@
                     </div>
                   </div>
                   <div class="topRecruit__inner">
-                    Improving the Healthcare Quality<br
+                    <p>Improving the Healthcare Quality</p><br
                       class="onlyPc"
-                    /><span class="f-12 ml-20">Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span>Reducing the Burden on Healthcare Professionals
+                    /><span class="f-12 ml-20">Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span><p>Reducing the Burden on Healthcare Professionals</p>
                     <br
                       class="onlyPc"
                     />
                     <span class="f-12 ml-20">By assisting with image interpretation and diagnosis, AI can help healthcare providers deliver higher-quality care to more patients<br></span>
-                   Addressing Disparities in Healthcare Access
+                   <p>Addressing Disparities in Healthcare Access</p>
                     <br
                       class="onlyPc"
                     />  
