--- a/index.html
+++ b/index.html
@@ -1087,16 +1087,16 @@
                   <div class="topRecruit__inner">
                     <p>Improving the Healthcare Quality</p><br
                       class="onlyPc"
-                    /><span class="f-12 ml-20">Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span><p>Reducing the Burden on Healthcare Professionals</p>
+                    /><span class="f-16 ml-20 w-80">Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span><p>Reducing the Burden on Healthcare Professionals</p>
                     <br
                       class="onlyPc"
                     />
-                    <span class="f-12 ml-20">By assisting with image interpretation and diagnosis, AI can help healthcare providers deliver higher-quality care to more patients<br></span>
+                    <span class="f-16 ml-20 w-80">By assisting with image interpretation and diagnosis, AI can help healthcare providers deliver higher-quality care to more patients<br></span>
                    <p>Addressing Disparities in Healthcare Access</p>
                     <br
                       class="onlyPc"
                     />  
-                    <span class="f-12 ml-20">Reducing regional disparities and improving the equity and accessibility of healthcare<br></span><br />
+                    <span class="f-16 ml-20 w-80">Reducing regional disparities and improving the equity and accessibility of healthcare<br></span><br />
                   </div>
                 </div>
               </section>
