--- a/index.html
+++ b/index.html
@@ -1098,6 +1098,9 @@
                     />  
                     <span class="f-16 ml-20 w-80">Reducing regional disparities and improving the equity and accessibility of healthcare<br></span><br />
                   </div>
+                  <div class="HRC-bg">
+                    <img src="./assets/img/common/HRC.avif" class="w-100"/>
+                  </div>
                 </div>
               </section>
               <section class="l-topContact l-topSection">
