--- a/index.html
+++ b/index.html
@@ -1084,6 +1084,7 @@
                       </a>
                     </div>
                   </div>
+                  <div class="flex">
                   <div class="topRecruit__inner">
                     <p>Improving the Healthcare Quality</p><br
                       class="onlyPc"
@@ -1098,8 +1099,9 @@
                     />  
                     <span class="f-16 ml-20 w-80">Reducing regional disparities and improving the equity and accessibility of healthcare<br></span><br />
                   </div>
-                  <div class="HRC-bg">
+                  <div class="HRC-bg w-50">
                     <img src="./assets/img/common/HRC.avif" class="w-100"/>
+                  </div>
                   </div>
                 </div>
               </section>
