--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
                     </div>
                   </div>
                   <div class="flex">
-                  <div class="topRecruit__inner">
+                  <div class="topRecruit__inner res-w-100">
                     <p>Improving the Healthcare Quality</p><br
                       class="onlyPc"
                     /><span class="f-16 ml-20 w-80">Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span><p>Reducing the Burden on Healthcare Professionals</p>
@@ -1099,7 +1099,7 @@
                     />  
                     <span class="f-16 ml-20 w-80">Reducing regional disparities and improving the equity and accessibility of healthcare<br></span><br />
                   </div>
-                  <div class="HRC-bg w-50">
+                  <div class="HRC-bg w-50 res-w-100">
                     <img src="./assets/img/common/HRC.avif" class="w-100"/>
                   </div>
                   </div>
