--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,7 @@
                       </a>
                     </div>
                   </div>
-                  <div class="flex">
+                  <div class="flex block">
                   <div class="topRecruit__inner res-w-100">
                     <p>Improving the Healthcare Quality</p><br
                       class="onlyPc"
