--- a/index.html
+++ b/index.html
@@ -1157,6 +1157,32 @@
                     </a>
                   </div>
                 </div>
+                 <nav class="p-local-nav u-box">
+            <div class="p-local-nav__box">
+              <em class="p-local-nav__ttl">会社概要</em>
+              <p class="p-local-nav__txt">会社情報や役員情報、沿革などを紹介。</p>
+              <a href="/about/company/" class="p-local-nav__link c-link">
+                <span class="c-link__txt">詳細を見る</span>
+                <span class="c-link__arw"></span>
+              </a>
+            </div>
+            <div class="p-local-nav__box">
+              <em class="p-local-nav__ttl">経営理念</em>
+              <p class="p-local-nav__txt">オプロが掲げるMissionや理念を紹介。</p>
+              <a href="/about/philosophy/" class="p-local-nav__link c-link">
+                <span class="c-link__txt">詳細を見る</span>
+                <span class="c-link__arw"></span>
+              </a>
+            </div>
+            <div class="p-local-nav__box">
+              <em class="p-local-nav__ttl">トップメッセージ</em>
+              <p class="p-local-nav__txt">未来を見据え、<br class="sp">まだ世の中にないものをつくり続ける。</p>
+              <a href="/about/message/" class="p-local-nav__link c-link">
+                <span class="c-link__txt">詳細を見る</span>
+                <span class="c-link__arw"></span>
+              </a>
+            </div>
+          </nav>
               </section>
             </div>
           </div>
