--- a/index.html
+++ b/index.html
@@ -1159,29 +1159,30 @@
                 </div>
                  <nav class="p-local-nav u-box">
             <div class="p-local-nav__box">
-              <em class="p-local-nav__ttl">会社概要</em>
-              <p class="p-local-nav__txt">会社情報や役員情報、沿革などを紹介。</p>
+              <em class="p-local-nav__ttl">Machine Learning Engineer</em>
+              <p class="p-local-nav__txt">You will be responsible for developing AI-driven medical diagnostic models using machine learning techniques. Experience in Python, TensorFlow, and PyTorch is highly desirable.</p>
               <a href="/about/company/" class="p-local-nav__link c-link">
-                <span class="c-link__txt">詳細を見る</span>
+                <span class="c-link__txt">MORE DETAIL</span>
                 <span class="c-link__arw"></span>
               </a>
             </div>
             <div class="p-local-nav__box">
-              <em class="p-local-nav__ttl">経営理念</em>
-              <p class="p-local-nav__txt">オプロが掲げるMissionや理念を紹介。</p>
+              <em class="p-local-nav__ttl">Business Strategy</em>
+              <p class="p-local-nav__txt">You will be tasked with formulating corporate growth strategies and handling fundraising activities. Prior experience in the medical or technology sectors is preferred.</p>
               <a href="/about/philosophy/" class="p-local-nav__link c-link">
-                <span class="c-link__txt">詳細を見る</span>
+                <span class="c-link__txt">MORE DETAIL</span>
                 <span class="c-link__arw"></span>
               </a>
             </div>
             <div class="p-local-nav__box">
-              <em class="p-local-nav__ttl">トップメッセージ</em>
-              <p class="p-local-nav__txt">未来を見据え、<br class="sp">まだ世の中にないものをつくり続ける。</p>
+              <em class="p-local-nav__ttl">Business Development</em>
+              <p class="p-local-nav__txt">You will lead the planning and execution of new business initiatives, establishing partnerships, and expanding our customer base. We seek candidates with strong communication skills combined with deep knowledge of advanced technologies, including AI.</p>
               <a href="/about/message/" class="p-local-nav__link c-link">
-                <span class="c-link__txt">詳細を見る</span>
+                <span class="c-link__txt">MORE DETAIL</span>
                 <span class="c-link__arw"></span>
               </a>
             </div>
+            
           </nav>
               </section>
             </div>
