--- a/index.html
+++ b/index.html
@@ -1108,15 +1108,14 @@
               <section class="l-topContact l-topSection">
                 <div class="topContact">
                   <div class="topContact__heading onlyPc js-topHeading">
-                    <span class="js-topHeadingInner">分野・</span
-                    ><span class="js-topHeadingInner">ご要望に</span
-                    ><span class="js-topHeadingInner">関わらず</span><br /><span
+                    <span class="js-topHeadingInner">Hiring  </span
+                    ><span class="js-topHeadingInner">Information</span
+                    ><span class="js-topHeadingInner">& Career</span><br /><span
                       class="js-topHeadingInner"
-                      >お気軽に</span
-                    ><span class="js-topHeadingInner">FAQ</span
-                    ><span class="js-topHeadingInner">ください</span>
+                      ></span
+                    ><span class="js-topHeadingInner"></span
+                    ><span class="js-topHeadingInner"></span>
                     <a href="https://www.opro.net/contact/" class="top__button">
-                      お問い合わせフォーム
                       <span>
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -1140,8 +1139,8 @@
                       class="js-topHeadingInner"
                       >お問い合わせ</span
                     ><span class="js-topHeadingInner">ください</span>
-                    <a href="https://www.opro.net/contact/" class="top__button">
-                      お問い合わせフォーム
+                    <a href="#" class="top__button">
+                      MORE DETAIL
                       <span>
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
