--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@
                     ><span class="js-topHeadingInner"></span
                     ><span class="js-topHeadingInner"></span>
                     <a href="https://www.opro.net/contact/" class="top__button">
-                      <span>
+                      MORE DETAIL<span>
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           width="34"
