--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                       <p class="intro-title">Think Different & Cool.</p>
                     </div>
                     <div class="mt-20">
-                      <div class="" id="">
+                      <div class="w-70" id="">
                         <span class="intro-text"
                           >Kewel Corporation is a technology company that
                           contributes to solving social issues with the power of
