--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                     <div class="mt-20">
                       <p class="intro-title">Think Different & Cool.</p>
                     </div>
-                    <div class="mt-20">
-                      <div class="w-70" id="">
+                    <div class="mt-20 w-70 flex">
+                      <div class="auto" id="">
                         <span class="intro-text"
                           >Kewel Corporation is a technology company that
                           contributes to solving social issues with the power of
