--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
                     <div class="mt-20">
                       <p class="intro-title">Think Different & Cool.</p>
                     </div>
-                    <div class="mt-20 w-70 flex">
-                      <div class="auto" id="">
-                        <span class="intro-text"
+                    <div class="mt-20  flex">
+                      <div class="w-70 auto" id="">
+                        <span class="intro-text auto"
                           >Kewel Corporation is a technology company that
                           contributes to solving social issues with the power of
                           advanced AI technology. We provide one-stop solutions
