--- a/index.html
+++ b/index.html
@@ -1086,6 +1086,13 @@
                   </div>
                   <div class="flex block">
                   <div class="topRecruit__inner res-w-100">
+                    <div class="p-about__concept-txts">
+                  <p class="p-about__concept-lead">オプロの見据える未来、あらゆるステークホルダーへの決意。<br class="pc">情報を最適化し、組織の成長へ繋げる、<br class="pc">オプロのプロダクトコンセプトを映像にしました。</p>
+                  <button class="p-about__concept-link c-link js-movie" data-video-id="CT3GlmustXg">
+                    <span class="c-link__txt typesquare_option">コンセプトムービーを見る</span>
+                    <span class="c-link__arw"></span>
+                  </button>
+                </div>
                     <p>Improving the Healthcare Quality</p><br
                       class="onlyPc"
                     /><span class="f-16 ml-20 w-80">Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span><p>Reducing the Burden on Healthcare Professionals</p>
