--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     <div class="mt-20">
                       <p class="intro-title">Think Different & Cool.</p>
                     </div>
-                    <div class="mt-20  flex">
+                    <div class="mt-20 flex">
                       <div class="w-70 auto" id="">
                         <span class="intro-text auto"
                           >Kewel Corporation is a technology company that
@@ -935,7 +935,9 @@
                       </div>
                       <div class="topNews__event">
                         <div class="topNews__subheading f-20">
-                          <span>AI-Powered Medical Diagnostic Support System</span>
+                          <span
+                            >AI-Powered Medical Diagnostic Support System</span
+                          >
                         </div>
                         <a
                           href="https://event.opro.net/"
@@ -970,11 +972,7 @@
                         <div class="topNews__subheading">
                           Cloud-based SaaS Medical Services
                         </div>
-                        <a
-                          href="#"
-                          class="topNews__eventLink"
-                          target="_blank"
-                        >
+                        <a href="#" class="topNews__eventLink" target="_blank">
                           Cloud-based medical services to deliver optimal
                           healthcare environments anytime, anywhere
                           <span>
@@ -1003,11 +1001,7 @@
                         <div class="topNews__subheading">
                           Medical Information Services
                         </div>
-                        <a
-                          href="#"
-                          class="topNews__eventLink"
-                          target="_blank"
-                        >
+                        <a href="#" class="topNews__eventLink" target="_blank">
                           Safely manage and leverage vast medical data for
                           improving the healthcare quality
                           <span>
@@ -1056,15 +1050,10 @@
                       ><span class="js-topHeadingInner">Medical Diagnosis</span
                       ><span class="js-topHeadingInner"></span><br /><span
                         class="js-topHeadingInner"
-                        ></span
-                      >
+                      ></span>
                     </h2>
                     <div class="topRecruit__buttonarea">
-                      <a
-                        href="#"
-                        class="top__button"
-                        target="_blank"
-                      >
+                      <a href="#" class="top__button" target="_blank">
                         MORE DETAIL
                         <span>
                           <svg
@@ -1085,41 +1074,98 @@
                     </div>
                   </div>
                   <div class="flex block">
-                  <div class="topRecruit__inner res-w-100">
-                    <div class="p-about__concept-txts">
-                  <p class="p-about__concept-lead">オプロの見据える未来、あらゆるステークホルダーへの決意。<br class="pc">情報を最適化し、組織の成長へ繋げる、<br class="pc">オプロのプロダクトコンセプトを映像にしました。</p>
-                  <button class="p-about__concept-link c-link js-movie" data-video-id="CT3GlmustXg">
-                    <span class="c-link__txt typesquare_option">コンセプトムービーを見る</span>
-                    <span class="c-link__arw"></span>
-                  </button>
-                </div>
-                    <p>Improving the Healthcare Quality</p><br
-                      class="onlyPc"
-                    /><span class="f-16 ml-20 w-80">Enhancing image clarity and improving the accuracy of lesion detection through AI can enable earlier detection of diseases<br></span><p>Reducing the Burden on Healthcare Professionals</p>
-                    <br
-                      class="onlyPc"
-                    />
-                    <span class="f-16 ml-20 w-80">By assisting with image interpretation and diagnosis, AI can help healthcare providers deliver higher-quality care to more patients<br></span>
-                   <p>Addressing Disparities in Healthcare Access</p>
-                    <br
-                      class="onlyPc"
-                    />  
-                    <span class="f-16 ml-20 w-80">Reducing regional disparities and improving the equity and accessibility of healthcare<br></span><br />
-                  </div>
-                  <div class="HRC-bg w-50 res-w-100">
-                    <img src="./assets/img/common/HRC.avif" class="w-100"/>
-                  </div>
+                    <div class="topRecruit__inner res-w-100">
+                      <div class="p-about__concept-txts">
+                        <h2>Improving the Healthcare Quality</h2>
+                        <p class="p-about__concept-lead">
+                          Enhancing image clarity and improving the accuracy of lesion<br
+                            class="pc"
+                          />detection through AI can enable earlier detection of diseases<br
+                            class="pc"
+                          />
+                        </p>
+                        <button
+                          class="p-about__concept-link c-link js-movie"
+                          data-video-id="CT3GlmustXg"
+                        >
+                          <span class="c-link__txt typesquare_option"
+                            >MORE DETAIL</span
+                          >
+                          <span class="c-link__arw"></span>
+                        </button>
+                      </div>
+                      <div class="p-about__concept-txts">
+                        <h2>Reducing the Burden on Healthcare Professionals</h2>
+                        <p class="p-about__concept-lead">
+                          By assisting with image interpretation and diagnosis,<br
+                            class="pc"
+                          />AI can help healthcare providers deliver higher-quality care to more patients<br
+                            class="pc"
+                          />
+                        </p>
+                        <button
+                          class="p-about__concept-link c-link js-movie"
+                          data-video-id="CT3GlmustXg"
+                        >
+                          <span class="c-link__txt typesquare_option"
+                            >MORE DETAIL</span
+                          >
+                          <span class="c-link__arw"></span>
+                        </button>
+                      </div>
+                      <div class="p-about__concept-txts">
+                        <h2>Addressing Disparities in Healthcare Access</h2>
+                        <p class="p-about__concept-lead">
+                          Reducing regional disparities and improving<br
+                            class="pc"
+                          />the equity and accessibility of healthcare<br
+                            class="pc"
+                          />
+                        </p>
+                        <button
+                          class="p-about__concept-link c-link js-movie"
+                          data-video-id="CT3GlmustXg"
+                        >
+                          <span class="c-link__txt typesquare_option"
+                            >MORE DETAIL</span
+                          >
+                          <span class="c-link__arw"></span>
+                        </button>
+                      </div>
+                      <p>Improving the Healthcare Quality</p>
+                      <br class="onlyPc" /><span class="f-16 ml-20 w-80"
+                        >Enhancing image clarity and improving the accuracy of
+                        lesion detection through AI can enable earlier detection
+                        of diseases<br
+                      /></span>
+                      <p>Reducing the Burden on Healthcare Professionals</p>
+                      <br class="onlyPc" />
+                      <span class="f-16 ml-20 w-80"
+                        >By assisting with image interpretation and diagnosis,
+                        AI can help healthcare providers deliver higher-quality
+                        care to more patients<br
+                      /></span>
+                      <p>Addressing Disparities in Healthcare Access</p>
+                      <br class="onlyPc" />
+                      <span class="f-16 ml-20 w-80"
+                        >Reducing regional disparities and improving the equity
+                        and accessibility of healthcare<br /></span
+                      ><br />
+                    </div>
+                    <div class="HRC-bg w-50 res-w-100">
+                      <img src="./assets/img/common/HRC.avif" class="w-100" />
+                    </div>
                   </div>
                 </div>
               </section>
               <section class="l-topContact l-topSection">
                 <div class="topContact">
                   <div class="topContact__heading onlyPc js-topHeading">
-                    <span class="js-topHeadingInner">Hiring  </span
+                    <span class="js-topHeadingInner">Hiring </span
                     ><span class="js-topHeadingInner">Information</span
                     ><span class="js-topHeadingInner">& Career</span><br /><span
                       class="js-topHeadingInner"
-                      ></span
+                    ></span
                     ><span class="js-topHeadingInner"></span
                     ><span class="js-topHeadingInner"></span>
                     <a href="https://www.opro.net/contact/" class="top__button">
@@ -1163,33 +1209,51 @@
                     </a>
                   </div>
                 </div>
-                 <nav class="p-local-nav u-box">
-            <div class="p-local-nav__box">
-              <em class="p-local-nav__ttl">Machine Learning Engineer</em>
-              <p class="p-local-nav__txt">You will be responsible for developing AI-driven medical diagnostic models using machine learning techniques. Experience in Python, TensorFlow, and PyTorch is highly desirable.</p>
-              <a href="/about/company/" class="p-local-nav__link c-link">
-                <span class="c-link__txt">MORE DETAIL</span>
-                <span class="c-link__arw"></span>
-              </a>
-            </div>
-            <div class="p-local-nav__box">
-              <em class="p-local-nav__ttl">Business Strategy</em>
-              <p class="p-local-nav__txt">You will be tasked with formulating corporate growth strategies and handling fundraising activities. Prior experience in the medical or technology sectors is preferred.</p>
-              <a href="/about/philosophy/" class="p-local-nav__link c-link">
-                <span class="c-link__txt">MORE DETAIL</span>
-                <span class="c-link__arw"></span>
-              </a>
-            </div>
-            <div class="p-local-nav__box">
-              <em class="p-local-nav__ttl">Business Development</em>
-              <p class="p-local-nav__txt">You will lead the planning and execution of new business initiatives, establishing partnerships, and expanding our customer base. We seek candidates with strong communication skills combined with deep knowledge of advanced technologies, including AI.</p>
-              <a href="/about/message/" class="p-local-nav__link c-link">
-                <span class="c-link__txt">MORE DETAIL</span>
-                <span class="c-link__arw"></span>
-              </a>
-            </div>
-            
-          </nav>
+                <nav class="p-local-nav u-box">
+                  <div class="p-local-nav__box">
+                    <em class="p-local-nav__ttl">Machine Learning Engineer</em>
+                    <p class="p-local-nav__txt">
+                      You will be responsible for developing AI-driven medical
+                      diagnostic models using machine learning techniques.
+                      Experience in Python, TensorFlow, and PyTorch is highly
+                      desirable.
+                    </p>
+                    <a href="/about/company/" class="p-local-nav__link c-link">
+                      <span class="c-link__txt">MORE DETAIL</span>
+                      <span class="c-link__arw"></span>
+                    </a>
+                  </div>
+                  <div class="p-local-nav__box">
+                    <em class="p-local-nav__ttl">Business Strategy</em>
+                    <p class="p-local-nav__txt">
+                      You will be tasked with formulating corporate growth
+                      strategies and handling fundraising activities. Prior
+                      experience in the medical or technology sectors is
+                      preferred.
+                    </p>
+                    <a
+                      href="/about/philosophy/"
+                      class="p-local-nav__link c-link"
+                    >
+                      <span class="c-link__txt">MORE DETAIL</span>
+                      <span class="c-link__arw"></span>
+                    </a>
+                  </div>
+                  <div class="p-local-nav__box">
+                    <em class="p-local-nav__ttl">Business Development</em>
+                    <p class="p-local-nav__txt">
+                      You will lead the planning and execution of new business
+                      initiatives, establishing partnerships, and expanding our
+                      customer base. We seek candidates with strong
+                      communication skills combined with deep knowledge of
+                      advanced technologies, including AI.
+                    </p>
+                    <a href="/about/message/" class="p-local-nav__link c-link">
+                      <span class="c-link__txt">MORE DETAIL</span>
+                      <span class="c-link__arw"></span>
+                    </a>
+                  </div>
+                </nav>
               </section>
             </div>
           </div>
