--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@
                   <div class="flex block">
                     <div class="topRecruit__inner res-w-100">
                       <div class="p-about__concept-txts">
-                        <h2>Improving the Healthcare Quality</h2>
+                        <h2 class="bold">Improving the Healthcare Quality</h2>
                         <p class="p-about__concept-lead">
                           Enhancing image clarity and improving the accuracy of lesion<br
                             class="pc"
@@ -1095,7 +1095,7 @@
                         </button>
                       </div>
                       <div class="p-about__concept-txts">
-                        <h2>Reducing the Burden on Healthcare Professionals</h2>
+                        <h2 class="bold">Reducing the Burden on Healthcare Professionals</h2>
                         <p class="p-about__concept-lead">
                           By assisting with image interpretation and diagnosis,<br
                             class="pc"
@@ -1114,7 +1114,7 @@
                         </button>
                       </div>
                       <div class="p-about__concept-txts">
-                        <h2>Addressing Disparities in Healthcare Access</h2>
+                        <h2 class="bold">Addressing Disparities in Healthcare Access</h2>
                         <p class="p-about__concept-lead">
                           Reducing regional disparities and improving<br
                             class="pc"
