--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
                 </div>
               </section>
               <section class="l-topRecruit l-topSection">
-                <div class="topRecruit">
+                <div class="topRecruit pb-0">
                   <div class="topRecruit__overview">
                     <div class="topRecruit__number">05</div>
                     <div class="topRecruit__tag">
@@ -1165,14 +1165,11 @@
                     </a>
                   </div>
                   <div class="topContact__heading onlySp js-topHeading">
-                    <span class="js-topHeadingInner">分野・</span
-                    ><span class="js-topHeadingInner">ご要望に</span><br /><span
+                    <span class="js-topHeadingInner">Hiring</span
+                    ><span class="js-topHeadingInner">Information</span><br /><span
                       class="js-topHeadingInner"
-                      >関わらず</span
-                    ><span class="js-topHeadingInner">お気軽に</span><br /><span
-                      class="js-topHeadingInner"
-                      >お問い合わせ</span
-                    ><span class="js-topHeadingInner">ください</span>
+                      >& Career</span
+                    >
                     <a href="#" class="top__button">
                       MORE DETAIL
                       <span>
