--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="stylesheet" href="./assets/css/add.css" />
-    <link rel="start" href="https://corp.opro.net/" />
+    <!-- <link rel="start" href="https://corp.opro.net/" /> -->
     <link href="./assets/img/favicon.ico" rel="shortcut icon" />
 
-    <link rel="canonical" href="https://corp.opro.net/" />
+    <!-- <link rel="canonical" href="https://corp.opro.net/" /> -->
 
     <!-- /HTMLヘッダー -->
     <meta property="og:site_name" content="株式会社オプロ" />
@@ -63,7 +63,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ja_JP" />
     <meta property="og:title" content="株式会社オプロ" />
-    <meta property="og:url" content="https://corp.opro.net/" />
+    <!-- <meta property="og:url" content="https://corp.opro.net/" /> -->
     <meta
       property="og:description"
       content="オプロは帳票を主体としたあらゆる分野で業務の流れを変革する会社です。"
