--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
                   HOME
                 </button>
                 <div class="l-gnav__sub" id="gnav-sub-1" aria-hidden="true">
-                  <a href="/about/" class="l-gnav__sub-link" data-device="sp"
-                    >会社情報 TOP</a
+                  <a href="#" class="l-gnav__sub-link" data-device="sp"
+                    >TOP</a
                   >
-                  <a href="/about/philosophy/" class="l-gnav__sub-link"
-                    >経営理念</a
+                  <a href="#" class="l-gnav__sub-link"
+                    >AI-MODE</a
                   >
-                  <a href="/about/message/" class="l-gnav__sub-link"
-                    >トップメッセージ</a
+                  <a href="#" class="l-gnav__sub-link"
+                    >DASHBOARD</a
                   >
-                  <a href="/about/company/" class="l-gnav__sub-link"
-                    >会社概要</a
+                  <a href="#" class="l-gnav__sub-link"
+                    >MEET</a
                   >
                 </div>
               </li>
@@ -148,13 +148,13 @@
                 <a href="/news/" class="l-gnav__link">COMPANY</a>
               </li>
               <li class="l-gnav__item">
-                <a href="https://www.opro.net/partnership/" class="l-gnav__link"
+                <a href="#" class="l-gnav__link"
                   >OFFERING</a
                 >
               </li>
               <li class="l-gnav__item">
                 <a
-                  href="https://spc.opro.net/hc/ja"
+                  href="#"
                   target="_blank"
                   class="l-gnav__link"
                   >HI&C</a
@@ -162,7 +162,7 @@
               </li>
               <li class="l-gnav__item">
                 <a
-                  href="https://event.opro.net/"
+                  href="#"
                   target="_blank"
                   class="l-gnav__link"
                   >MSS</a
@@ -170,14 +170,14 @@
               </li>
               <li class="l-gnav__item">
                 <a
-                  href="https://event.opro.net/"
+                  href="#"
                   target="_blank"
                   class="l-gnav__link"
                   >AI-AMD</a
                 >
               </li>
               <li class="l-gnav__item">
-                <a href="/ir/" class="l-gnav__link" data-device="pc"
+                <a href="#" class="l-gnav__link" data-device="pc"
                   >ABOUT US</a
                 >
                 <button
