--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                     </div>
                     <div class="mt-20 flex">
                       <div class="w-70 auto" id="">
-                        <span class="intro-text auto"
+                        <span class="intro-text auto blog"
                           >Kewel Corporation is a technology company that
                           contributes to solving social issues with the power of
                           advanced AI technology. We provide one-stop solutions
@@ -395,7 +395,7 @@
                   <div class="topAbout__tag">
                     <span class="topAbout__tagIcon"
                       ><img
-                        src="./assets/img/common/1.avif"
+                        src="./assets/img/common/check.svg"
                         class="lazyload"
                         width="177"
                         height="46"
@@ -518,7 +518,7 @@
                   <div class="topProducts__tag">
                     <span class="topProducts__tagIcon"
                       ><img
-                        data-src="./images/check.svg"
+                        data-src="./assets/img/common/check.svg"
                         width="177"
                         height="46"
                         alt=""
@@ -753,7 +753,7 @@
                     <div class="topNews__titleTag">
                       <span class="topNews__tagIcon"
                         ><img
-                          data-src="./images/check.svg"
+                          data-src="./assets/img/common/check.svg"
                           width="177"
                           height="46"
                           alt=""
@@ -882,7 +882,7 @@
                       <div class="topNews__titleTag">
                         <span class="topNews__tagIcon"
                           ><img
-                            data-src="./images/check.svg"
+                            data-src="./assets/img/common/check.svg"
                             width="177"
                             height="46"
                             alt=""
@@ -1037,7 +1037,7 @@
                     <div class="topRecruit__tag">
                       <span class="topRecruit__tagIcon"
                         ><img
-                          data-src="./images/check.svg"
+                          data-src="./assets/img/common/check.svg"
                           width="177"
                           height="46"
                           alt=""
